# xueli-core-rs

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  README.md  config.example.toml
.github/workflows/: ci.yml
docs/: Trait抽象层.md  信号与周边系统.md  服务层.md  核心运行时.md  消息处理管线.md  移植方案.md  记忆系统.md  项目架构.md
examples/: qq_bot.rs
examples/napcat_adapter/: mod.rs
prompts/en/: README.txt
prompts/zh-CN/: character_adaptation.prompt  drive_reflection.prompt  emoji_reply.prompt  feedback_triage.prompt  identity.prompt  insight_digestion.prompt  memory_extraction.prompt  memory_extraction_user.prompt  memory_merge.prompt  memory_reliability.prompt  narrative_self.prompt  planner.prompt  planner_emoji_section.prompt  planner_reminder.prompt  prompt_notes.prompt  reflection.prompt  reflection_user.prompt  relationship_tone.prompt  reply_agent_system_base.prompt  reply_style_guidance.prompt  scene_guidance_group.prompt  scene_guidance_private.prompt  timing_gate.prompt  timing_gate_identity.prompt  vision.prompt  vision_emotion.prompt  vision_sticker_fallback.prompt  vision_sticker_prompt.prompt  vision_user_prompt.prompt
src/: lib.rs
src/adapters/: mod.rs  napcat.rs
src/character/: card_service.rs  mod.rs  narrative.rs
src/core/: bootstrap.rs  config.rs  context_recorder.rs  dispatcher.rs  errors.rs  immutable_message_log.rs  lifecycle.rs  log_labels.rs  log_text.rs  message_trace.rs  metrics.rs  mod.rs  mood_engine.rs  platform_types.rs  reply_sender.rs  (+7 more)
tests/: e2e_basic_flow.rs  e2e_drive_flow.rs  e2e_group_mention_flow.rs  e2e_proactive_share.rs  integration_basic.rs
(+114 files in other folders)
