[package]
name = "xueli-core"
version = "0.1.0"
edition = "2021"
description = "xueli 核心对话框架 Rust 标准库"
license = "MIT"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 配置
config = "0.14"
toml = "0.8"
schemars = "0.8"

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "stream"] }

# SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# 错误处理
thiserror = "1"

# async trait
async-trait = "0.1"

# LLM token 计数
tiktoken-rs = "0.5"

# 中文分词
jieba-rs = "0.7"

# SHA256
sha2 = "0.10"
hex = "0.4"

# 图片处理
image = "0.25"

# base64
base64 = "0.22"

# UUID
uuid = { version = "1", features = ["v4"] }

# 日期时间
chrono = { version = "0.4", features = ["serde"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 并发数据结构
dashmap = "5"
parking_lot = "0.12"
futures-util = "0.3"

# 迭代器扩展
itertools = "0.13"

# 随机数
rand = "0.8"

# 正则表达式
regex = "1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"